ft:Se agrega las dos opciones nuevas en la navegacion

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <li class="opcion"><a href="pages/caja.html">Modelo de caja</a></li>
             <li class="opcion"><a href="pages/componente.html">Componentes de Software</a></li>
             <li class="opcion"><a href="pages/empezandoconjs.html">JS Básico</a></li>
+            <li class="opcion"><a href="pages/eventos.html">Eventos</a></li>
+            <li class="opcion"><a href="pages/producto.html">Producto mejorado</a></li>
         </ul>
     </section>
 </body>
