--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <li class="opcion"><a href="pages/empezandoconjs.html">JS Básico</a></li>
             <li class="opcion"><a href="pages/eventos.html">Eventos</a></li>
             <li class="opcion"><a href="pages/producto.html">Producto mejorado</a></li>
+            <li class="opcion"><a href="pages/concurrencia.html">Secuencial vs Concurrencia</a></li>
+            <li class="opcion"><a href="pages/trycatch.html">Try catch</a></li>
         </ul>
     </section>
 </body>
